[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Asteroid.gd" type="Script" id=1]
[ext_resource path="res://Assets/normal_asteroid.png" type="Texture" id=2]
[ext_resource path="res://Assets/Explosion.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 1.4616e-009, 0.765714, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.451429, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 1.5
damping_random = 0.5
scale = 2.0
color_ramp = SubResource( 4 )

[node name="Asteroid" type="Area2D" groups=[
"Obstacles",
]]
position = Vector2( 24, 21 )
input_pickable = false
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -11, -12, -3, -16, 3, -16, 8, -11, 12, -11, 16, -5, 16, -3, 10, 3, 10, 5, 12, 6, 12, 9, 11, 13, 5, 15, 5, 16, 1, 16, -6, 15, -9, 11, -11, 11, -13, 9, -13, 4, -16, 2, -16, -6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 1.7, 2.8 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 2.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
bus = "Sounds"
[connection signal="area_entered" from="." to="." method="_on_Asteroid_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Asteroid_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
